refactor(form): minor change detection improvement

--- a/projects/editor/src/lib/form/form.component.html
+++ b/projects/editor/src/lib/form/form.component.html
@@ -29,7 +29,7 @@
             <ng-template matTabContent>
                 <editor-text-editor
                     class="text-editor"
-                    [value]="formFieldsJSON"
+                    [value]="formFieldsJSON$ | async"
                     [mode]="'application/json'"
                     readonly
                 ></editor-text-editor>
