--- a/projects/editor/src/lib/editor.component.html
+++ b/projects/editor/src/lib/editor.component.html
@@ -23,6 +23,7 @@
                     mat-icon-button
                     [matMenuTriggerFor]="fieldOptionsMenu"
                     [matMenuTriggerData]="{ options: fieldOptions }"
+                    (click)="$event.stopPropagation()"
                 >
                     <mat-icon>add</mat-icon>
                 </button>
@@ -121,8 +122,7 @@
             </editor-edit-field>
         </editor-sidebar-section>
 
-        <!-- TODO fix isCollapsed... -->
-        <editor-sidebar-section [isCollapsed]="false">
+        <editor-sidebar-section [isCollapsed]="true">
             <div
                 class="section-header-content"
                 headerContent
@@ -131,12 +131,12 @@
                 <button
                     mat-icon-button
                     [matMenuTriggerFor]="modelOptionsMenu"
+                    (click)="$event.stopPropagation()"
                 >
                     <mat-icon>more_vert</mat-icon>
                 </button>
             </div>
 
-            <!-- TODO delete field data from model on replace or remove -->
             <div
                 class="tree-container"
                 mainContent
