--- a/projects/editor/src/lib/sidebar/sidebar-section/sidebar-section.component.html
+++ b/projects/editor/src/lib/sidebar/sidebar-section/sidebar-section.component.html
@@ -3,24 +3,20 @@
     *ngIf="index !== 0"
     (mousedown)="onSectionMouseDown($event)"
 ></div>
-<div class="sidebar-header">
-    <button
-        [disabled]="!isCollapsible"
-        mat-icon-button
-        (click)="onToggleExpansionClicked()"
+<div
+    class="sidebar-header"
+    (click)="onToggleExpansionClicked()"
+>
+    <mat-icon
+        class="expand-icon"
+        [class.expanded-90]="!isCollapsed"
+        >chevron_right</mat-icon
     >
-        <mat-icon
-            class="expand-icon"
-            [class.expanded-90]="!isCollapsed"
-            *ngIf="isCollapsible"
-            >chevron_right</mat-icon
-        >
-    </button>
     <ng-content select="[headerContent]"></ng-content>
 </div>
 <div
     class="sidebar-section-content"
-    [style.height.px]="contentHeight"
+    [style.height.px]="height - headerHeight"
 >
     <ng-content select="[mainContent]"></ng-content>
 </div>
