--- a/projects/editor/src/lib/sidebar/sidebar-section/sidebar-section.component.scss
+++ b/projects/editor/src/lib/sidebar/sidebar-section/sidebar-section.component.scss
@@ -8,7 +8,6 @@
     position: relative;
     height: 100%;
     height: 4px;
-    flex-shrink: 0;
     background-color: rgba(0, 0, 0, 0.12);
     cursor: ns-resize;
 }
@@ -34,7 +33,9 @@
     column-gap: 8px;
     padding: 0 12px;
     border-bottom: 1px solid rgba(0, 0, 0, 0.12);
+    box-sizing: border-box;
     user-select: none;
+    cursor: pointer;
 }
 
 .sidebar-header-left {
@@ -46,5 +47,4 @@
 .sidebar-section-content {
     display: block;
     overflow: auto;
-    height: 100%;
 }
