--- a/projects/editor/src/lib/editor.component.scss
+++ b/projects/editor/src/lib/editor.component.scss
@@ -1,7 +1,7 @@
 :host {
     --add-form-btn-width: 120px;
-    // add-btn + git-btn + spacing
-    --add-form-width: calc(var(--add-form-btn-width) + 40px + 24px);
+    // add-btn + spacing
+    --add-form-width: calc(var(--add-form-btn-width) + 16px);
     display: flex;
     height: 100%;
 
