--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,3 +1,5 @@
+@import 'bootstrap/scss/bootstrap';
+
 // Generated tailwind styles for the editor's styling system (styling tab)
 @import './projects/editor/assets/styles/tailwind.scss';
 
