--- a/projects/editor/src/lib/editor.component.scss
+++ b/projects/editor/src/lib/editor.component.scss
@@ -74,9 +74,10 @@ editor-sidebar {
     align-items: center;
     justify-content: center;
     column-gap: 8px;
-    height: var(--editor-header-height);
+    height: calc(var(--editor-header-height) + 1px);
     width: var(--add-form-width);
     border-bottom: 1px solid rgba(0, 0, 0, 0.12);
+    box-sizing: border-box;
 }
 
 .add-form-btn {
