--- a/projects/editor/src/lib/form/toolbar/toolbar.component.scss
+++ b/projects/editor/src/lib/form/toolbar/toolbar.component.scss
@@ -2,9 +2,10 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    height: var(--editor-header-height);
+    height: calc(var(--editor-header-height) + 1px);
     padding: 0 8px;
     border-bottom: 1px solid rgba(0, 0, 0, 0.12);
+    box-sizing: border-box;
 }
 
 .action-buttons {
