--- a/projects/editor/src/lib/sidebar/sidebar-section/sidebar-section.component.scss
+++ b/projects/editor/src/lib/sidebar/sidebar-section/sidebar-section.component.scss
@@ -27,7 +27,7 @@
 }
 
 .sidebar-header {
-    height: var(--editor-header-height);
+    height: calc(var(--editor-header-height) + 1px);
     display: flex;
     align-items: center;
     column-gap: 8px;
