--- a/projects/editor/src/lib/form/toolbar/toolbar.component.html
+++ b/projects/editor/src/lib/form/toolbar/toolbar.component.html
@@ -12,7 +12,7 @@
     </mat-button-toggle>
 </mat-button-toggle-group>
 
-<div class="action-buttons">
+<div class="editor-action-buttons">
     <mat-slide-toggle
         labelPosition="before"
         [ngModel]="isEditMode"
