--- a/projects/editor/assets/styles/styles.scss
+++ b/projects/editor/assets/styles/styles.scss
@@ -143,6 +143,12 @@ formly-field {
     opacity: 0.6 !important;
 }
 
+.editor-action-buttons {
+    display: inline-flex;
+    align-items: center;
+    column-gap: 16px;
+}
+
 [hidden] {
     display: none !important;
 }
