--- a/projects/editor/src/lib/custom-formly/formly-field/formly-field.component.scss
+++ b/projects/editor/src/lib/custom-formly/formly-field/formly-field.component.scss
@@ -4,27 +4,31 @@
 
 .editor-field-container {
     position: relative;
+    transition: border-color 0.15 ease-out;
 }
 
 .editor-field-container.edit-mode {
     background-color: white;
-    border: 2px solid transparent;
+    border: 2px solid;
+    border-color: transparent;
     border-radius: 4px;
 }
 
 .editor-field-container.edit-mode:hover {
-    border: 2px solid rgba(0, 0, 0, 0.08);
+    border: 2px solid;
+    border-color: rgba(0, 0, 0, 0.12);
 }
 
 .editor-field-container.edit-mode.active {
-    border: 2px solid rgba(0, 0, 0, 0.25);
+    border: 2px solid;
+    border-color: rgba(0, 0, 0, 0.4);
 }
 
 header {
     display: flex;
     user-select: none;
     border-radius: 2px 2px 0 0;
-    padding: 2px;
+    padding: 1px 2px;
     box-sizing: border-box;
     background-color: rgba(0, 0, 0, 0.12);
 }
@@ -41,11 +45,25 @@ header {
 .options {
     display: flex;
     column-gap: 4px;
-    visibility: hidden;
-}
+    opacity: 0;
+    transition: opacity 0.15s ease-out;
 
-.options.visible {
-    visibility: visible;
+    &.visible {
+        opacity: 1;
+    }
+
+    .mat-icon-button {
+        height: 20px;
+        width: 20px;
+        line-height: 20px;
+
+        .mat-icon {
+            font-size: 16px;
+            height: 18px;
+            width: 18px;
+            line-height: 18px;
+        }
+    }
 }
 
 .editor-field-content.edit-mode {
