fix(sidebar): remove transition while resizing

--- a/projects/editor/assets/styles/styles.scss
+++ b/projects/editor/assets/styles/styles.scss
@@ -85,7 +85,7 @@ editor-edit-field {
     height: 40px !important;
 }
 
-editor-sidebar .resizing {
+.editor-resizing {
     transition: none !important;
 }
 
