feat(editor): move config out of services

--- a/projects/editor/src/lib/custom-formly/formly-field/formly-field.component.html
+++ b/projects/editor/src/lib/custom-formly/formly-field/formly-field.component.html
@@ -133,7 +133,7 @@
     <button
         class="editor-mat-menu-item"
         mat-menu-item
-        (click)="selected(option.type)"
+        (click)="selected(option.name)"
     >
         {{ option.displayName }}
     </button>
