--- a/projects/editor/src/lib/field-tree-item/field-tree-item.component.html
+++ b/projects/editor/src/lib/field-tree-item/field-tree-item.component.html
@@ -118,7 +118,7 @@
     <button
         class="editor-mat-menu-item"
         mat-menu-item
-        (click)="selected(option.type)"
+        (click)="selected(option.name)"
     >
         {{ option.displayName }}
     </button>
